--- a/shops/templates/product/product_form.html
+++ b/shops/templates/product/product_form.html
@@ -67,7 +67,7 @@
       </div>
       <div class="clearfix"></div>
       <div class="seven columns alpha margin-top-15 margin-bottom-15">
-        <p style="color: #3acf87; margin: 0">Выберите категориюр: </p>
+        <p style="color: #3acf87; margin: 0">Выберите категорию: </p>
           {{ form.categories|as_crispy_field }}
       </div>
       <div class="clearfix"></div>
