--- a/theme/static/css/green.css
+++ b/theme/static/css/green.css
@@ -64,6 +64,9 @@ a.button.gray:hover,
     background-color: #3acf87;
 }
 
+
+a.green-color,
+a.green-color i,
 a,
 .happy-clients-author,
 #categories li li a.active span,
