--- a/theme/templates/email/order_email_request_approved.html
+++ b/theme/templates/email/order_email_request_approved.html
@@ -9,7 +9,7 @@
     </tr>
     <tr>
         <td style="padding: 20px 0 30px 0; color: #153643; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
-            Вы опубликовали на сайте <a href="http://{{ request.get_host }}">handmaker.top</a> заказ - <a href="http://{{ request.get_host }}{{ order.get_absolute_url }}">{{ order }}</a>, для которого нашелся исполнитель: <a href="http://{{ request.get_host }}{% url 'profile' performer %}">{{ performer.profile.get_full_name }}</a>
+            Вы опубликовали на сайте <a href="http://{{ request.get_host }}">handmaker.top</a> заказ - <a href="http://{{ request.get_host }}{{ order.get_absolute_url }}">{{ order }}</a>, для которого нашелся исполнитель: <a href="http://{{ request.get_host }}{{ performer.profile.get_absolute_url }}">{{ performer.profile.get_full_name }}</a>
         </td>
     </tr>
     {% if message %}
@@ -26,7 +26,8 @@
     {% endif %}
     <tr>
         <td style="padding: 25px 0 0 0; color: #153643; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
-            Вы можете одобрить его заявку в <a href="http://{{ request.get_host }}{% url 'ordertableitem-list' %}">панели управления</a>
+            Вы можете одобрить его заявку в
+            <a href="http://{{ request.get_host }}{% url 'ordertableitemrequest-list' order.pk %}">панели управления</a>
         </td>
     </tr>
 </table>
